JumpScript/tests/baselines/reference/project/declareVariableCollision/amd/declareVariableCollision.errors.txt
in1.d.jump(1,8): error TS2300: Duplicate identifier 'a'.
in2.d.jump(1,8): error TS2300: Duplicate identifier 'a'.


==== decl.d.jump (0 errors) ====
    // bug 535531: duplicate identifier error reported for "import" declarations in separate files
    
    declare module A
    {
    
        class MyRoot { }
    
        export module B
        {
            class MyClass{ }
        }
    }
==== in1.d.jump (1 errors) ====
    import a = A;
           ~
!!! error TS2300: Duplicate identifier 'a'.
==== in2.d.jump (1 errors) ====
    import a = A;
           ~
!!! error TS2300: Duplicate identifier 'a'.